--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       image: "docker.elastic.co/beats/filebeat:7.2.0"
       user: root
       volumes:
-          - /root/elk/filebeat.yml:/usr/share/filebeat/filebeat.yml:ro
+          - /root/elk-stack-demo/filebeat.yml:/usr/share/filebeat/filebeat.yml:ro
           - /var/lib/docker:/var/lib/docker:ro
           - /var/run/docker.sock:/var/run/docker.sock
 
